openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_GayBerneForce_getExceptionParameters(
        target: *const OpenMM_GayBerneForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        sigma: *mut f64,
        epsilon: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_setExceptionParameters(
        target: *mut OpenMM_GayBerneForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        sigma: f64,
        epsilon: f64,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_updateParametersInContext(
        target: *mut OpenMM_GayBerneForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_GayBerneForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_GayBerneForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_TwoParticleAverageSite_create(
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        weight1: f64,
        weight2: f64,
    ) -> *mut OpenMM_TwoParticleAverageSite;
}
extern "C" {
    pub fn OpenMM_TwoParticleAverageSite_destroy(target: *mut OpenMM_TwoParticleAverageSite);
}
extern "C" {
    pub fn OpenMM_TwoParticleAverageSite_getWeight(
        target: *const OpenMM_TwoParticleAverageSite,
        particle: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_create(
        particles: *const OpenMM_IntArray,
        originWeights: *const OpenMM_DoubleArray,
        xWeights: *const OpenMM_DoubleArray,
        yWeights: *const OpenMM_DoubleArray,
        localPosition: *const OpenMM_Vec3,
    ) -> *mut OpenMM_LocalCoordinatesSite;
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_create_2(
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        originWeights: *const OpenMM_Vec3,
        xWeights: *const OpenMM_Vec3,
        yWeights: *const OpenMM_Vec3,
        localPosition: *const OpenMM_Vec3,
    ) -> *mut OpenMM_LocalCoordinatesSite;
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_destroy(target: *mut OpenMM_LocalCoordinatesSite);
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_getOriginWeights(
        target: *const OpenMM_LocalCoordinatesSite,
        weights: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_getXWeights(
        target: *const OpenMM_LocalCoordinatesSite,
        weights: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_getYWeights(
        target: *const OpenMM_LocalCoordinatesSite,
        weights: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_LocalCoordinatesSite_getLocalPosition(
        target: *const OpenMM_LocalCoordinatesSite,
    ) -> *const OpenMM_Vec3;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_create(
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomBondForce;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_destroy(target: *mut OpenMM_CustomBondForce);
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getNumBonds(
        target: *const OpenMM_CustomBondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getNumPerBondParameters(
        target: *const OpenMM_CustomBondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getNumGlobalParameters(
        target: *const OpenMM_CustomBondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getNumEnergyParameterDerivatives(
        target: *const OpenMM_CustomBondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getEnergyFunction(
        target: *const OpenMM_CustomBondForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setEnergyFunction(
        target: *mut OpenMM_CustomBondForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_addPerBondParameter(
        target: *mut OpenMM_CustomBondForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getPerBondParameterName(
        target: *const OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setPerBondParameterName(
        target: *mut OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_addGlobalParameter(
        target: *mut OpenMM_CustomBondForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getGlobalParameterName(
        target: *const OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setGlobalParameterName(
        target: *mut OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_addEnergyParameterDerivative(
        target: *mut OpenMM_CustomBondForce,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getEnergyParameterDerivativeName(
        target: *const OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_addBond(
        target: *mut OpenMM_CustomBondForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomBondForce_getBondParameters(
        target: *const OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setBondParameters(
        target: *mut OpenMM_CustomBondForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_updateParametersInContext(
        target: *mut OpenMM_CustomBondForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_setUsesPeriodicBoundaryConditions(
        target: *mut OpenMM_CustomBondForce,
        periodic: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_CustomBondForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomBondForce,
    ) -> OpenMM_Boolean;
}
pub const OpenMM_State_DataType_OpenMM_State_Positions: OpenMM_State_DataType = 1;
pub const OpenMM_State_DataType_OpenMM_State_Velocities: OpenMM_State_DataType = 2;
pub const OpenMM_State_DataType_OpenMM_State_Forces: OpenMM_State_DataType = 4;
pub const OpenMM_State_DataType_OpenMM_State_Energy: OpenMM_State_DataType = 8;
pub const OpenMM_State_DataType_OpenMM_State_Parameters: OpenMM_State_DataType = 16;
pub const OpenMM_State_DataType_OpenMM_State_ParameterDerivatives: OpenMM_State_DataType = 32;
pub type OpenMM_State_DataType = u32;
extern "C" {
    pub fn OpenMM_State_create() -> *mut OpenMM_State;
}
extern "C" {
    pub fn OpenMM_State_destroy(target: *mut OpenMM_State);
}
extern "C" {
    pub fn OpenMM_State_getTime(target: *const OpenMM_State) -> f64;
}
extern "C" {
    pub fn OpenMM_State_getPositions(target: *const OpenMM_State) -> *const OpenMM_Vec3Array;
}
extern "C" {
    pub fn OpenMM_State_getVelocities(target: *const OpenMM_State) -> *const OpenMM_Vec3Array;
}
extern "C" {
    pub fn OpenMM_State_getForces(target: *const OpenMM_State) -> *const OpenMM_Vec3Array;
}
extern "C" {
    pub fn OpenMM_State_getKineticEnergy(target: *const OpenMM_State) -> f64;
}
extern "C" {
    pub fn OpenMM_State_getPotentialEnergy(target: *const OpenMM_State) -> f64;
}
extern "C" {
    pub fn OpenMM_State_getPeriodicBoxVectors(
        target: *const OpenMM_State,
        a: *mut OpenMM_Vec3,
        b: *mut OpenMM_Vec3,
        c: *mut OpenMM_Vec3,
    );
}
extern "C" {
    pub fn OpenMM_State_getPeriodicBoxVolume(target: *const OpenMM_State) -> f64;
}
extern "C" {
    pub fn OpenMM_State_getParameters(target: *const OpenMM_State) -> *const OpenMM_ParameterArray;
}
extern "C" {
    pub fn OpenMM_State_getEnergyParameterDerivatives(
        target: *const OpenMM_State,
    ) -> *const OpenMM_ParameterArray;
}
extern "C" {
    pub fn OpenMM_State_getDataTypes(target: *const OpenMM_State) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_create() -> *mut OpenMM_HarmonicAngleForce;
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_destroy(target: *mut OpenMM_HarmonicAngleForce);
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_getNumAngles(
        target: *const OpenMM_HarmonicAngleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_addAngle(
        target: *mut OpenMM_HarmonicAngleForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        angle: f64,
        k: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_getAngleParameters(
        target: *const OpenMM_HarmonicAngleForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        particle3: *mut ::std::os::raw::c_int,
        angle: *mut f64,
        k: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_setAngleParameters(
        target: *mut OpenMM_HarmonicAngleForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        angle: f64,
        k: f64,
    );
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_updateParametersInContext(
        target: *mut OpenMM_HarmonicAngleForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_setUsesPeriodicBoundaryConditions(
        target: *mut OpenMM_HarmonicAngleForce,
        periodic: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_HarmonicAngleForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_HarmonicAngleForce,
    ) -> OpenMM_Boolean;
}
